--- a/client/index.html
+++ b/client/index.html
@@ -46,6 +46,14 @@
     <main class="main">
         <section class="catalog">
             <div class="catalog__container container">
+                <div class="catalog__row">
+                    <button class="catalog__button" type="button">пицца</button>
+                    <button class="catalog__button" type="button">роллы</button>
+                    <button class="catalog__button" type="button">салаты</button>
+                    <button class="catalog__button" type="button">десерты</button>
+                    <button class="catalog__button" type="button">напитки</button>
+                    <button class="catalog__button" type="button">прочее</button>
+                </div>
                 <h2 class="catalog__title">Меню</h2>
                 <div class="catalog__grid">
                     <div class="card">
