add styles for tabs

--- a/client/index.html
+++ b/client/index.html
@@ -45,8 +45,8 @@
     </header>
     <main class="main">
         <section class="catalog">
-            <div class="catalog__container container">
-                <div class="catalog__row">
+            <div class="catalog__wrapper">
+                <div class="catalog__row container">
                     <button class="catalog__button" type="button">пицца</button>
                     <button class="catalog__button" type="button">роллы</button>
                     <button class="catalog__button" type="button">салаты</button>
@@ -54,6 +54,8 @@
                     <button class="catalog__button" type="button">напитки</button>
                     <button class="catalog__button" type="button">прочее</button>
                 </div>
+            </div>
+            <div class="catalog__container container">
                 <h2 class="catalog__title">Меню</h2>
                 <div class="catalog__grid">
                     <div class="card">
