--- a/client/index.html
+++ b/client/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <title>UNO - лучшая пиццерия в городе</title>
-    <link rel="stylesheet" href="../client/css/main.min.css">
+    <link rel="stylesheet" href="./client/css/main.min.css">
 </head>
 
 <body>
