--- a/client/index.html
+++ b/client/index.html
@@ -750,7 +750,7 @@
         </div>
     </footer>
 </body>
-<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+<script src="./js/swiper-bundle.min.js"></script>
 <script src="./js/main.js" type="module"></script>
 
 </html>
