--- a/client/index.html
+++ b/client/index.html
@@ -12,7 +12,7 @@
 <body>
     <header class="header">
         <div class="header__container container">
-            <button class="header__mobile-button">
+            <button class="header__mobile-button" type="button">
                 <span></span><span></span><span></span>
             </button>
             <div class="logo">
@@ -35,7 +35,7 @@
                 </ul>
             </nav>
             <div class="header__buttons">
-                <button class="header__button" id="button-cart">
+                <button class="header__button" id="button-cart" type="button">
                     <svg width="50" height="50" viewBox="0 0 43 42" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <g clip-path="url(#clip0_26_14)">
                             <path
