add shopping cart notification

--- a/client/index.html
+++ b/client/index.html
@@ -48,6 +48,7 @@
                             </clipPath>
                         </defs>
                     </svg>
+                    <span class="header__button-count">1</span>
                 </button>
             </div>
         </div>
