--- a/client/index.html
+++ b/client/index.html
@@ -29,13 +29,13 @@
             </div>
             <nav class="header__nav">
                 <ul class="header__nav-list">
-                    <li class="header__nav-item"><a href="#catalog" class="header__nav-link">Меню</a></li>
-                    <li class="header__nav-item"><a href="/" class="header__nav-link">О нас</a></li>
-                    <li class="header__nav-item"><a href="/" class="header__nav-link">Контакты</a></li>
+                    <li class="header__nav-item"><a href="./index.html#catalog" class="header__nav-link">Меню</a></li>
+                    <li class="header__nav-item"><a href="./about.html" class="header__nav-link">О нас</a></li>
+                    <li class="header__nav-item"><a href="./contacts.html" class="header__nav-link">Контакты</a></li>
                 </ul>
             </nav>
             <div class="header__buttons">
-                <button class="header__button" id="button-cart" type="button">
+                <a class="header__button" id="button-cart" href="./cart.html">
                     <svg width="50" height="50" viewBox="0 0 43 42" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <g clip-path="url(#clip0_26_14)">
                             <path
@@ -49,7 +49,7 @@
                         </defs>
                     </svg>
                     <span class="header__button-count">1</span>
-                </button>
+                </a>
             </div>
         </div>
     </header>
